src/forms/components/inputs/_input.scss
@import "../../../root.scss";
.formField{
  padding-bottom: 10px;
}

.ohriFormLabel {
  font-size: 0.75rem
}

.datePickerOverrides input {
  width: $ohri-input-width !important;
}

.formInputField {
    @extend .formField;
    width: auto;
}

.formInputField > div > div > label{
    width: auto;
}

.formInputField > div > div > div {
    width: $ohri-input-width !important;
}

.dropDownOverride{
    width: auto;
    padding-bottom: 10px;
}

.dropDownOverride > div > div{
    width: $ohri-input-width !important;
}

.numberInputWrapper :global(.bx--number) {
  @extend .formField;
  width: $ohri-input-width;
  font-size: 0.875rem;
}

.textContainer label {
  font-size: 0.875rem !important;
}

.selectedOption {
  border-radius: 4px;
  width: 15rem;
}

.selectedOption button {
  background-color: $ui-01;
}

.switchOverrides {
  background-color: #edf5ff !important;
  color: #0f62fe !important;
  padding: 0 0 0 1rem;
  border: solid 1px #0f62fe !important;
}

.switchOverrides button:focus {
  border: none !important;
}

.selectedOption button:before {
  display: none !important;
}

.switchOverridesNone {
  background-color: $ui-01 !important;
  padding: 0 0 0 1rem;
  border: solid 1px #a6c8ff !important;
}

.radioButton_ohri input[type="radio"] {
  opacity: 0 !important;
  position: fixed;
  width: 0;
}

.radioButton_ohri label {
  display: inline-block;
  border: 1px solid #a6c8ff;
  color: $color-gray-70;
  padding: 0.688rem 1rem;
  padding-right: 3rem;
  border-radius: 4px 0 0 4px;
  background-color: $ui-01;
}

.radioButton_ohri label:last-child {
  margin-left: -5px;
  border-radius: 0 4px 4px 0;
}

.radioButton_ohri input[type="radio"]:checked + label {
  color: #0f62fe;
  border-color: #0f62fe;
  background-color: #edf5ff;
}

.radioButton_ohri > .bx--radio-button-wrapper {
  margin-right: 0rem !important;
}

.textInputOverrides {
  width: $ohri-input-width;
}

.textInputOverrides label { 
  font-size: 0.875rem !important;
}

.unspecified{
  margin-top: -13px;
}

.unspecified > div label {
  font-size: 12px;
  color: $color-gray-70;
  padding-bottom: 1rem;
}

.errorLegend legend, .errorLabel label {
  color: #da1e28;
  font-size: 0.875rem !important;
}

.unspecified > div label {
    font-size: 12px;
    color: $color-gray-70;
}

.errorLegend legend, .errorLabel label {
    color: #da1e28
} 

